Fix mock grid layout issue

--- a/public/stylesheets/shared/mock_grid.css
+++ b/public/stylesheets/shared/mock_grid.css
@@ -27,6 +27,7 @@
 }
 .mock_grid li {
   float: left;
+  height: 215px;
   margin: 0 20px 14px 0;
   padding: 5px 5px 5px 0;
   width: 150px;
